# Cardano-NFT-Ticketing

./: .gitignore  LICENSE.txt  README.md  Ticketing.cabal  cabal.project
src/: DataTypes.hs  Offchain.hs  Onchain.hs  Trace.hs
