cabal-version:      2.0
name:               Ticketing
version:            0.1.0.0
synopsis:           NFT Ticketing
license:            MIT
license-file:       LICENSE
author:             Ciaran

build-type:         Simple
extra-source-files: CHANGELOG.md

common project-config
  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

library
    exposed-modules:  Offchain
                      Onchain
                      DataTypes
                      Trace
    build-depends:    base ^>=4.14.1.0
    		          , aeson
                    , containers
                    , serialise
                    , bytestring
                    , data-default
                    , freer-extras
                    , plutus-chain-index-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-tx-plugin
                    , plutus-tx
                    , playground-common -any
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
